                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 24-04-2005 fixed/changed: stuff-up with ac3/dts passthrough with dvdplayer and fixes to discontinuity handling
                              selecing audiotrack from dvdmenu should now be fully working.
  - 24-04-2005 changed: white button on keypad now brings up the new time/progessbar
  - 22-04-2005 fixed: Location of Kai Thumbs didn't use the thumbs folder configured.
  - 22-04-2005 added: gapless mp3 playback.  Files should be encoded with LAME (>3.90.3) in order to be truly gapless.
  - 22-04-2005 changed: Enable Visualisation combined into vis spincontrol (first option is Off).
  - 22-04-2005 changed: my music, adding songs to existing, stopped playlist will start the first song added
  - 22-04-2005 added: audioscrobbler now saves a cache if no server is available or connection failed
  - 22-04-2005 fixed: audioscrobbler tried to submit songs, before the initial handshake with the server succeeds
  - 19-04-2005 changed: increased thumb cache to 64K thumbs (from 4K)
                        thumbs will need to be recreated or use tools/UpdateThumbs.py from the scripts dialog to update your old thumb cache
  - 19-04-2005 fixed: create thumbs in my pictures now skips files that already have thumbs
  - 19-04-2005 changed: settings where 0 indicates off show "Off" as text now
  - 19-04-2005 fixed: audioscrobbler status notification is shown every 30 sec. if no network connection available
  - 19-04-2005 updated: Spanish language file (Thnx to jose_t)
  - 19-04-2005 updated: German language file
  - 19-04-2005 updated: Polish language file (Thnx to napek)
  - 19-04-2005 updated: Norwegian language file (Thnx to vnm)