@@ -1348,34 +1348,36 @@ void CGUIWindowMusicBase::OnPopupMenu(int iItem)
   // clean any buttons not needed
   pMenu->ClearButtons();
   // add the needed buttons
-  pMenu->AddButton(13351); // Music Information
-  pMenu->AddButton(13347); // Queue Item
-  pMenu->AddButton(13350); // Now Playing...
-  pMenu->AddButton(137);  // Search...
+  pMenu->AddButton(13351);    // 1: Music Information
+  pMenu->AddButton(13347);    // 2: Queue Item
+  pMenu->AddButton(13358);    // 3: Play Item
+  pMenu->AddButton(13350);    // 4: Now Playing...
+  pMenu->AddButton(137);      // 5: Search...
   if (g_application.m_guiDialogMusicScan.IsRunning())
-    pMenu->AddButton(13353); // Stop Scanning
+    pMenu->AddButton(13353);  // 6: Stop Scanning
   else
-    pMenu->AddButton(13352); // Scan Folder to Database
-  pMenu->AddButton(600);  // Rip CD Audio
-  pMenu->AddButton(5);   // Settings...
+    pMenu->AddButton(13352);  // 6: Scan Folder to Database
+  pMenu->AddButton(600);      // 7: Rip CD Audio
+  pMenu->AddButton(5);        // 8: Settings...
 
+  // turn off info/queue/play if the current item is goto parent ..
   bool bIsGotoParent = m_vecItems[iItem]->GetLabel() == "..";
-  //turn of info/queue if the current item is goto parent ..
   if (bIsGotoParent)
   {
     pMenu->EnableButton(1, false);
     pMenu->EnableButton(2, false);
+    pMenu->EnableButton(3, false);
   }
+  // turn off the now playing button if nothing is playing
+  if (!g_application.IsPlayingAudio())
+    pMenu->EnableButton(4, false);
+  // turn off the Scan button if we're not in files view or a internet stream
+  if (GetID() != WINDOW_MUSIC_FILES || m_Directory.IsInternetStream())
+    pMenu->EnableButton(6, false);
   // turn off Rip CD Audio button if we don't have a CDDA disk in
   CCdInfo *pCdInfo = CDetectDVDMedia::GetCdInfo();
   if (!CDetectDVDMedia::IsDiscInDrive() || !pCdInfo || !pCdInfo->IsAudio(1))
-    pMenu->EnableButton(6, false);
-  // turn off the now playing button if nothing is playing
-  if (!g_application.IsPlayingAudio())
-    pMenu->EnableButton(3, false);
-  // turn off the Scan button if we're not in files view or a internet stream
-  if (GetID() != WINDOW_MUSIC_FILES || m_Directory.IsInternetStream())
-    pMenu->EnableButton(5, false);
+    pMenu->EnableButton(7, false);
   // position it correctly
   pMenu->SetPosition(iPosX - pMenu->GetWidth() / 2, iPosY - pMenu->GetHeight() / 2);
   pMenu->DoModal(GetID());
@@ -1387,22 +1389,25 @@ void CGUIWindowMusicBase::OnPopupMenu(int iItem)
   case 2:  // Queue Item
     OnQueueItem(iItem);
     break;
-  case 3:  // Now Playing...
-    m_gWindowManager.ActivateWindow(WINDOW_MUSIC_PLAYLIST);
-    return ;
+  case 3:  // Play Item
+    PlayItem(iItem);
     break;
-  case 4:  // Search
+  case 4:  // Now Playing...
+    m_gWindowManager.ActivateWindow(WINDOW_MUSIC_PLAYLIST);
+    return;
+    break;
+  case 5:  // Search
     OnSearch();
     break;
-  case 5:  // Scan...
+  case 6:  // Scan...
     OnScan();
     break;
-  case 6:  // Rip CD...
+  case 7:  // Rip CD...
     OnRipCD();
     break;
-  case 7:  // Settings
+  case 8:  // Settings
     m_gWindowManager.ActivateWindow(WINDOW_SETTINGS_MYMUSIC);
-    return ;
+    return;
     break;
   }
   m_vecItems[iItem]->Select(bSelected);
@@ -1488,5 +1493,80 @@ void CGUIWindowMusicBase::SetLabelFromTag(CFileItem *pItem)
   {
     CUtil::SecondsToHMSString(nDuration, strLabel);
     pItem->SetLabel2(strLabel);
+  }
+}
+
+void CGUIWindowMusicBase::AddItemToTempPlayList(const CFileItem* pItem)
+{
+  if (pItem->m_bIsFolder)
+  {
+    // Check if we add a locked share
+    if ( pItem->m_bIsShareOrDrive )
+    {
+      CFileItem item = *pItem;
+      if ( !g_passwordManager.IsItemUnlocked( &item, "music" ) )
+        return ;
+    }
+
+    // recursive
+    if (pItem->GetLabel() == "..") return ;
+    CStdString strDirectory = m_Directory.m_strPath;
+    m_Directory.m_strPath = pItem->m_strPath;
+    CFileItemList items;
+    GetDirectory(m_Directory.m_strPath, items);
+    DoSort(items);
+    for (int i = 0; i < items.Size(); ++i)
+    {
+      AddItemToTempPlayList(items[i]);
+    }
+    m_Directory.m_strPath = strDirectory;
+  }
+  else
+  {
+    if (!pItem->IsNFO() && pItem->IsAudio() && !pItem->IsPlayList())
+    {
+      CPlayList::CPlayListItem playlistItem;
+      CUtil::ConvertFileItemToPlayListItem(pItem, playlistItem);
+      g_playlistPlayer.GetPlaylist(PLAYLIST_MUSIC_TEMP).Add(playlistItem);
+    }
+  }
+}
+
+void CGUIWindowMusicBase::PlayItem(int iItem)
+{
+  // restrictions should be placed in the appropiate window code
+  // only call the base code if the item passes since this clears
+  // the currently playing temp playlist
+
+  const CFileItem* pItem = m_vecItems[iItem];
+  // if its a folder, build a temp playlist
+  if (pItem->m_bIsFolder)
+  {
+    // skip ".."
+    if (pItem->GetLabel() == "..")
+      return;
+
+    // clear current temp playlist
+    g_playlistPlayer.GetPlaylist(PLAYLIST_MUSIC_TEMP).Clear();
+    g_playlistPlayer.Reset();
+
+    // recursively add items to temp playlist
+    AddItemToTempPlayList(pItem);
+
+    // play!
+    g_playlistPlayer.SetCurrentPlaylist(PLAYLIST_MUSIC_TEMP);
+    if (g_playlistPlayer.ShuffledPlay(PLAYLIST_MUSIC_TEMP))
+    {
+      // if shuffled dont start on first song
+      g_playlistPlayer.SetCurrentSong(0);
+      g_playlistPlayer.PlayNext();
+    }
+    else
+      g_playlistPlayer.Play(0);
+  }
+  // otherwise just play the song
+  else
+  {
+    OnClick(iItem);
   }
 }
