@@ -23,10 +23,8 @@ protected:
   virtual void OnSearchItemFound(const CFileItem* pItem);
   virtual void GetDirectoryHistoryString(const CFileItem* pItem, CStdString& strHistoryString);
   virtual void AddItemToPlayList(const CFileItem* pItem);
-
-  // new methods
-  void PlayItem(int iItem);
-  void AddItemToTempPlayList(const CFileItem* pItem);
+  virtual void PlayItem(int iItem);
+  virtual void AddItemToTempPlayList(const CFileItem* pItem);
 
   // state of the window
   int m_iState;
