@@ -410,6 +410,25 @@ bool CGUIWindowMusicSongs::OnMessage(CGUIMessage& message)
       {
         OnRipCD();
       }
+      else if (m_viewControl.HasControl(iControl))  // list/thumb control
+      {
+        int iItem = m_viewControl.GetSelectedItem();
+        int iAction = message.GetParam1();
+
+        // use play button to add folders of items to temp playlist
+        if (iAction == ACTION_PLAYER_PLAY)
+        {
+          // if playback is paused or playback speed != 1, return
+          if (g_application.IsPlayingAudio())
+          {
+            if (g_application.m_pPlayer->IsPaused()) return true;
+            if (g_application.GetPlaySpeed() != 1) return true;
+          }
+
+          // not playing audio, or playback speed == 1
+          PlayItem(iItem);
+        }
+      }
     }
     break;
   }
@@ -1333,4 +1352,17 @@ void CGUIWindowMusicSongs::DeleteRemoveableMediaDirectoryCache()
     }
   }
   while (FindNextFile(hFind, &wfd));
+}
+
+void CGUIWindowMusicSongs::PlayItem(int iItem)
+{
+  // unlike additemtoplaylist, we need to check the items here
+  // before calling it since the current playlist will be stopped
+  // and cleared!
+
+  // we're at the root bookmark listing
+  if (m_Directory.m_strPath.IsEmpty())
+    return;
+
+  CGUIWindowMusicBase::PlayItem(iItem);
 }
